# swe-digest

./: .ci-smoke-verify.md  .gitignore  .rumdl.toml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  config.toml  dprint.json  mise.toml  pyproject.toml  requirements.txt  zola.toml
.config/mise/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feedback.yml  story.yml
.github/workflows/: books-snapshot.yml  ci.yml  claude-code-review.yml  claude.yml  codeql.yml  content-run.yml  daily-digest.yml  digest-quality.yml  failure-alert.yml  hn-probe.yml  hn-snapshot.yml  issue-guard.yml  issue-triage.yml  pages.yml  papers-snapshot.yml  scorecard.yml  snapshots.yml  (+3 more)
content/: _index.md
data/: search-aliases.toml  watchlist.toml
docs/: routine.md  threat-model.md
memory/: README.md  access-notes.md  entities.md  followups.md  profile.md  source-reliability.md
routine/: config.toml  routine.md  threat-model.md  watchlist.toml
scripts/: backtest_misses.py  build_stories.py  check_content.py  commit_snapshot.py  fetch_books.py  fetch_events.py  fetch_hn.py  fetch_papers.py  fetch_youtube.py  merge_books_snapshot.py  merge_hn_snapshot.py  merge_papers_snapshot.py  merge_yt_snapshot.py  new_digest.py  publish_run.py  run_log.py  yield_stats.py
site/: zola.toml
static/: filter.js  localtime.js  search-init.js  search.js  style.css
templates/: 404.html  about.html  base.html  digest.html  digests.html  feed.xml  home.html  macros.html  page.html  search.html  story.html  taxonomy_list.html  taxonomy_single.html
tests/: conftest.py  test_check_content.py  test_check_memory.py  test_check_size.py  test_cli.py  test_fetch_run.py  test_gate_properties.py  test_publish_gate.py  test_snapshot_commit.py  test_units.py
tool/: .rumdl.toml  dprint.json  pyproject.toml
(+432 files in other folders)
